# llmops-project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build.yaml
deploy/docker/: Dockerfile
src/: webapp.py
